--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -53,6 +53,9 @@
       <i class="fa-regular fa-envelope"></i>
       <input name="email" type="email" placeholder="Email">
     </div>
+
+
+    <div></div>
     <div class="input">
       <i class="fa-regular fa-message"></i>
       <textarea
